# sonic-openconfig-diagnostic-gateway

./: .env.example  .env.sonic.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/adapters/: __init__.py  base.py  cisco_native_iosxe.py  fixture_device.py  gnmi_client.py  gnoi_client.py  openconfig_iosxe.py  parsers.py
app/api/: changes.py  diagnostics.py  discovery.py  health.py  operations.py
app/diagnostics/: engine.py  report_builder.py
app/services/: audit_service.py  change_service.py  diagnostic_service.py  discovery_service.py  gnoi_probe_service.py  security_posture_service.py
docs/runbooks/: phase-1-runbook.md  phase-10-runbook.md  phase-2-runbook.md  phase-3-runbook.md  phase-4-runbook.md  phase-5-runbook.md  phase-6-runbook.md  phase-7-runbook.md  phase-8-runbook.md  phase-9-runbook.md
fixtures/capabilities/: iosxe-sandbox.json
fixtures/gnoi/: iosxe-sandbox.json
fixtures/interfaces/: openconfig-all.json  openconfig-gig0-0.json  openconfig-gig1-0-1.json  openconfig-vlan1.json  raw-interface-state.json
packaging/debian/: gateway.env
packaging/sonic-buildimage/: sonic-openconfig-diagnostic-gateway.mk
packaging/systemd/: sonic-openconfig-diagnostic-gateway.service
postman/: SONiC-OpenConfig-Diagnostic-Gateway.postman_collection.json
scripts/: build_deb.sh  bundle_for_sonic.sh  capture_interface_fixtures.py  gnmi_get_interface.py  setup_on_sonic.sh  sonic_ctl.sh
tests/integration/: test_api.py
tests/unit/: test_fixture_adapter.py  test_health.py  test_operations.py  test_parsers.py
(+13 files in other folders)
