[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic-openconfig-diagnostic-gateway"
version = "0.1.0"
description = "Network diagnostic gateway for SONiC using gNMI/gNOI with OpenConfig YANG models"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SONiC OpenConfig Team"}
]
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gnmi = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.0",
]
gnoi = [
    "grpcio-reflection>=1.68.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.setuptools.packages.find]
include = ["app*"]
